[project]
name = "colab-mcp"
version = "0.1.0"
description = "An MCP server for Colab"
readme = "README.md"
authors = [
    { name = "Tyler Pirtle", email = "rtp@google.com" },
    { name = "Josie Cuff", email = "josiecuff@google.com" },
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.2.0",
]

[project.scripts]
colab-mcp = "colab_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastmcp>=2.2.0",
    "pytest>=8.4.2",
]
